[package]
name = "hashable-map"
version = "0.1.0"
edition = "2024"
authors = ["Lut99"]
repository = "https://github.com/Lut99/hashable-map-rs"
license = "Apache-2.0"
description = """
Implements a so-called `HashableMap`, which is exactly like a HashMap but with some performance traded in for determinism in some cases.


# Installation
To use this library in your Rust project, simply add it to your `Cargo.toml` file:
```toml
[dependencies]
hashable-map = { git = "https://github.com/Lut99/hashable-map-rs" }
```

Optionally, you can commit to a specific version:
```toml
[dependencies]
hashable-map = { git = "https://github.com/Lut99/hashable-map-rs", tag = "v0.1.0" }
```

You can enable features with the `features`-key:
```toml
[dependencies]
hashable-map = { git = "https://github.com/Lut99/hashable-map-rs", features = ["serde"] }
```


# Usage
The only type exported by this crate is the `HashableMap` type. It wraps a normal `HashMap` nearly transparently, except for a few changes:
- The HashableMap implements `Hash`. It does so by first ordering the keys by their `Ord`-implementation, then hashing the keys & values in that order. This will provide a map- and `RandomState`-independent fixed ordering that makes the hashes the same.
- In the same way, the library provides variants of `iter()`- `keys()`- and `values()`-functions ending in `_fixed` that always iterate in the order determined by the key's `Ord`-implementation.

For example, showing the equal hashes:
```rust
use std::hash::{DefaultHasher, Hash, Hasher as _};
use hashable_map::HashableMap;

fn hash_one<T: Hash>(elem: T) -> u64 {
    let mut hasher = DefaultHasher::new();
    elem.hash(&mut hasher);
    hasher.finish()
}


// Do it multiple times to catch determinism issues!
let contents = [(0, "foo"), (1, "bar"), (2, "baz")];
for _ in 0..100 {
    let map1 = HashableMap::from(contents);
    let map2 = HashableMap::from(contents);
    assert_eq!(hash_one(map1), hash_one(map2));
}
```

Or the consistent ordering:
```rust
use hashable_map::HashableMap;

// Do it multiple times to hope to catch determinism issues
let map = HashableMap::from([(0, "foo"), (1, "bar"), (2, "baz")]);
for _ in 0..100 {
    let mut iter = map.iter_fixed();
    assert_eq!(iter.next(), Some((&0, &"foo")));
    assert_eq!(iter.next(), Some((&1, &"bar")));
    assert_eq!(iter.next(), Some((&2, &"baz")));
    assert_eq!(iter.next(), None);
}
```

## Features
The project has the following feature flags:
- `ast-toolkit`: Enables a `Spanning`-implementation from the [`ast-toolkit`](https://github.com/Lut99/ast-toolkit-rs)-crate on the `HashableMap`.
- `serde`: Enables a `Serialize`- and `Deserialize`-implementation on the `HashableMap`. They will always serialize in the order indicated by `K`.
  
  For example:
  ```rust
  use hashable_map::HashableMap;

  // Do it multiple times to hope to catch determinism issues
  let map = HashableMap::from([(0, "foo"), (1, "bar"), (2, "baz")]);
  for _ in 0..100 {
      let smap = serde_json::to_string_pretty(&map).unwrap();
      assert_eq!(smap, r#"{
    "0": "foo",
    "1": "bar",
    "2": "baz"
  }"#);
  }
  ```


# Contribution
Feel free to contribute to this crate by [raising an issue](https://github.com/Lut99/hashable-map-rs/issues) or [creating a pull request](https://github.com/Lut99/hashable-map-rs/pulls).


# License
This project is licensed under the Apache 2.0 license. See [`LICENSE`](./LICENSE) for more information.
"""


[dependencies]
ast-toolkit = { git = "https://github.com/Lut99/ast-toolkit-rs", rev = "e242399db68b00fe3097d20de956f1dd22553ca0", default-features = false, features = ["span"], optional = true }
serde = { version = "1.0.0", features = ["derive"], optional = true }


[dev-dependencies]
serde_json = { version = "1.0.0" }


[features]
default = []

ast-toolkit = ["dep:ast-toolkit"]
serde = ["dep:serde"]
